# service-kernel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: full.rs  minimal.rs  workers.rs
src/: lib.rs
src/errors/: action.rs  classifier.rs  kernel_error.rs  mod.rs  registry.rs  severity.rs
src/events/: dispatcher.rs  kernel_event.rs  mod.rs  topic.rs
src/health/: check.rs  mod.rs  registry.rs  snapshot.rs  status.rs
src/kernel/: builder.rs  builtins.rs  context.rs  core.rs  handles.rs  mod.rs  subsystem.rs
src/lifecycle/: controller.rs  mod.rs  phase.rs  state.rs  transition.rs
src/metrics/: backend.rs  kernel_metrics.rs  mod.rs  noop.rs  snapshot.rs
src/primitives/: global.rs  id.rs  mod.rs  time.rs
src/shutdown/: coordinator.rs  drain.rs  hook.rs  mod.rs  report.rs  token.rs
src/worker/: context.rs  criticality.rs  event.rs  handle.rs  mod.rs  panic.rs  spec.rs  state.rs  supervisor.rs  traits.rs  watchdog.rs
src/worker/adapter/: mod.rs  proc_daemon.rs
src/worker/policy/: backoff.rs  circuit.rs  mod.rs  restart.rs
tests/: circuit_basic.rs  circuit_supervisor_integration.rs  drain_stress.rs  errors_basic.rs  events_basic.rs  events_fanout_stress.rs  events_lifecycle_integration.rs  health_basic.rs  health_stress.rs  kernel_boot.rs  kernel_boot_stress.rs  kernel_failure_paths.rs  kernel_run_shutdown.rs  kernel_snapshot.rs  kernel_topo_sort.rs  lifecycle_basic.rs  lifecycle_stress.rs  lifecycle_with_metrics.rs  metrics_basic.rs  primitives_global.rs  primitives_id.rs  primitives_time.rs  shutdown_basic.rs  shutdown_signal_smoke.rs  shutdown_with_hooks.rs  shutdown_with_workers.rs  supervisor_stress.rs  watchdog_basic.rs  watchdog_stress.rs  worker_basic.rs  worker_criticality.rs  worker_panic_isolation.rs  worker_restart_policy.rs
